--- a/OneMainWeb/OneMain.Master
+++ b/OneMainWeb/OneMain.Master
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="/Scripts/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="/Scripts/jquery-ui-1.10.4.min.js"></script>
     <script type="text/javascript" src="/Scripts/jquery.validate.min.js"></script> 
-	<script src="JavaScript/bootstrap.min.js"></script>
+	<script src="/JavaScript/bootstrap.min.js"></script>
 	
 	<style type="text/css">
     	.browser-link { display: block;padding: 4px;padding-top: 110px;background-repeat: no-repeat;background-position: center top;text-decoration: none;text-align: center; }
@@ -45,7 +45,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			  </button>
-			  <a class="navbar-brand" href="#"><img src="../res/one_logo.gif" alt="One.NET" style="float: left;" /><asp:Literal ID="LiteralAppVersion" runat="server" EnableViewState="false"></asp:Literal></a>
+			  <a class="navbar-brand" href="#"><img src="../res/one-net.png" alt="One.NET" style="float: left;" /><asp:Literal ID="LiteralAppVersion" runat="server" EnableViewState="false"></asp:Literal></a>
 			</div>
 			<div class="navbar-collapse collapse">
 			  <ul class="nav navbar-nav navbar-right">
