git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@86 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Utils/one.css
+++ b/OneMainWeb/Utils/one.css
@@ -201,6 +201,8 @@ input.alt_btn {color: #fff; background-color: #ec971f; border-color: #d58512;}
 /**/
 .clear-cache {margin: 20px 0 30px 0;}
 .clear-cache input {margin: 0; color: #fff; background-color: #5bc0de; border-color: #46b8da;}
+/**/
+.ce-it-1, .ce-it-2 {width: 100%;}
 
 /* calendar */
 
