git-svn-id: https://rs.unfuddle.com/svn/rs_one-net/trunk@94 6715eb51-551b-4bfe-bfcf-ba04cf7c9ab1

--- a/OneMainWeb/Account/Account.Master
+++ b/OneMainWeb/Account/Account.Master
@@ -5,6 +5,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title></title>
+     <link href="/adm/css/one.css" type="text/css" rel="stylesheet" media="all" />
+    <link href="/Content/themes/base/jquery-ui.css" type="text/css" rel="stylesheet" media="all"  />
+    <!-- Bootstrap core CSS -->
+    <link href="/adm/css/bootstrap.min.css" rel="stylesheet">
+	
+    <!-- Custom styles for this template -->
+    <link href="/adm/css/dashboard.css" rel="stylesheet">
+	
+    <script type="text/javascript" src="/Scripts/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="/Scripts/jquery-ui-1.10.4.min.js"></script>
+    <script type="text/javascript" src="/Scripts/jquery.validate.min.js"></script> 
+    
+	<script src="/JavaScript/bootstrap.min.js"></script>
+
+
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
