--- a/OneMainWeb/Account/Account.Master
+++ b/OneMainWeb/Account/Account.Master
@@ -25,10 +25,8 @@
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <asp:ContentPlaceHolder ID="MainContent" runat="server">
-        
-        </asp:ContentPlaceHolder>
+    <div class="container">
+        <asp:ContentPlaceHolder ID="MainContent" runat="server" />
     </div>
     </form>
 </body>
